css/screen.css
/* ignore this line */

/*
.modal-body .wrapper.name .col-lg-1,
.modal-body .wrapper.name .col-lg-5,
.modal-body .wrapper.name .col-lg-6 {
    padding-left: 2px !important;
    padding-right: 2px !important;
}
*/

html,body
{
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden; 
}

.table.monos tbody tr td:nth-child(even) {
    font-family: "Lucida Console", Monaco, monospace;
    background: #eeeeee;
}

.table.short-codes thead td {
    font-weight: bold;
}

.table.short-codes tbody tr td {
    font-family: "Lucida Console", Monaco, monospace;
}

.table.short-codes tr td:nth-child(odd) {
    text-align: right;
}

.table.short-codes tr td:nth-child(odd):after {
    content: '➜';
}

.table.short-codes tbody tr td:nth-child(even) {
    background: #eeeeee;
}

#cslFieldLabel {
    font-weight: bold;
}

#cslFieldLabel::after {
    content: ':';
    font-weight: bold;
}

div.modal-body div.wrapper {
    display: none;
}

div.modal-body.name div.wrapper.name,
div.modal-body.date div.wrapper.date,
div.modal-body.number div.wrapper.number,
div.modal-body.text div.wrapper.text,
div.modal-body.locator div.wrapper.locator {
    display: block;
}

div.well,
pre,
div.keep-together {
    display: inline-block;
    width: 100%;
}

.multi-column div.keep-together.toc li {
    margin-bottom: 0px;
}

.boxy {
    padding: 0.02em;
    border: 1px solid #666666;
}

.boxy.greyish {
    background: #dddddd;
}

.well.greenish,
.boxy.greenish {
    background: #c0ffc0;
}

.well.yellowish,
.boxy.yellowish {
    background: #fffeb2;
}

.boxy.reddish {
    background: #ffd1d4;
}

.boxy.reddly {
    background: #ff9194;
}

.well.blueish,
.boxy.blueish {
    background: #d1d2ff;
}

.boxy.noborder {
    border: none !important;
}

.inline-blocks { 
    text-align:center;
}

.inline-block {
    text-align: left;
    margin: 0 0.1em 0 0.1em;
    padding:0.5em;
    border-left: 1px solid #cccccc;
    border-right: 1px solid #cccccc;
    display: inline-block;
}

.mono {
    font-family: "Lucida Console", Monaco, monospace;
    background: #eeeeee;
}

.small-caps {
    font-variant: small-caps;
}

.ui-tabs-panel {
    padding: 1em 1.4em 0px 1.4em !important;
}

.panel {
    margin-bottom: 0px;
}

.noshow {
    display: none;
}

.multi-column {}

.multi-column li {
    margin-bottom: 0.5em;
}

@media (min-width: 992px) {
    .multi-column {
        -webkit-column-gap: 20px;
           -moz-column-gap: 20px;
                column-gap: 20px;
      -webkit-column-count: 2;
         -moz-column-count: 2;
              column-count: 2;
    }
}

.guidance {
    text-align:left;
    border:1px solid black;
    border-radius:2em;
    padding:0.5em 1em 0.5em 1em;
    margin-bottom: 1em;
}

.popover a.close {
    font-size: 200%;
    font-weight: bold;
    float: right;
    margin-right: 5px;
}

a.disabled-link,
a.disabled-link:visited ,
a.disabled-link:active,
a.disabled-link:hover {
    background-color:#d9d9d9 !important;
    color:#aaa !important;
}

.top-blurb {
    margin:0 15px 0 15px;
    padding:0.5em 0 0.5em 0;
    border:3px solid #888888;
    border-radius:2em;
}

.downloads .row.odd .col-lg-4:nth-child(odd), .downloads .row.even .col-lg-4:nth-child(even) {
    padding-top: 3px;
}

.downloads .row.even .col-lg-4:nth-child(odd), .downloads .row.odd .col-lg-4:nth-child(even) {
    padding-top: 3px;
    background: #eeeeee;
}



.download-button, .download-button:visited, .download-button:active, .download-button:focus {
    cursor:pointer;
    text-decoration:none;
    border:2px solid #008000;
    border-radius:2em;
    float:left;
    width:14em;
    padding:0.5em;
    color:#333;
    margin:0.5em 0.5em 0.5em -0.5em;
    background: rgba(0, 80, 0, 0.1);
}

.download-button:hover {
    background:green;
    color:white;
    text-decoration:none;
    transition: background .3s, color .3s;
}

.download-button .bigtext {
    font-size:115%;
    text-align: center;
}

.download-button .smalltext {
    font-size:90%;
    text-align: center;
}

col-lg-6.vcenter {
    vertical-align:middle;
    float:none;
    display:inline-block;
    font-size: 200%;
}

.big-button-top {
    border-radius:2em 2em 0 0;
    border-left:3px solid #888888;
    border-right:3px solid #888888;
    border-bottom:1px solid #888888;
    border-top:3px solid #888888;
    margin:20px 20px 0 20px;
    text-align:center;
    background:#cccccc;
    font-size: 200%;
    cursor:pointer;
}

.big-button-bottom {
    border-radius: 0 0 2em 2em;
    border-left:3px solid #888888;
    border-right:3px solid #888888;
    border-bottom:3px solid #888888;
    /* min-height:10em; */
    margin:0 20px 20px 20px;
    padding:1em;
    background:#eeeeee;
    font-size: 120%;
    cursor:pointer;
}

.big-button-bottom:hover {
    background: white;
}

.big-button-bottom dd {
    margin-left: 1em;
}

.big-button-top div {
    padding: 0.25em 0 0.25em 0;
    background: #dddddd;
    margin-bottom: 0;
    margin-top: 0;
    border-radius: 2em 2em 0 0;
}

.search-input-as-dropdown {
    width: 100%;
    display: block;
}

.indent {
    padding-left: 1em;
}

.indent.big {
    padding-left: 2em;
}

.indent.hanging,
.indent .hanging {
    text-indent: -1em;
}

.buttony {
    color: #ffffff;
    background: #428bca;
    border: 1px solid #cccccc;
    border-radius: 5px;
    padding: 0.12em 0.25em 0.12em 0.25em;
}

.buttony.bubble {
    padding: 0.15em 0.25em;
    border-radius: 1em;
    border: 1px solid #eeeeee;
}

.grey.buttony {
    color: #000000;
    background: #e6e6e6;
}

.turquoise.buttony {
    color: #000000;
    background: #aaddff;
}

.green.buttony {
    background: #5cb85c;
}

.tabby {
    background: #ffffff;
    border: 1px solid #cccccc;
    border-radius: 5px 5px 0 0;
    padding: 0.25em 0.25em 0 0.25em;
}

.courier {
    font-family: Ubuntu Mono;
    font-size: 120%;
    font-weight: bold;
    color: #666666;
}

.small-faint-heading {
    font-size: smaller;
    font-weight: bold;
    color: #999999;
    text-indent: -1em;
}

.small-note {
    font-size: smaller;
    color: red;
}

#juris-m-button {
    cursor: pointer;
}

#search-input-button {
    z-index: 2;
    width: 100%;
}

#search-input-caret {
    z-index: 3;
    right: 31px;
}

#search-input-button .btn-info:hover {
    background-color: #5BC0DE;
    border-color: #46B8DA;
}

#search-input-dropdown a:hover, #search-input-dropdown a:focus {
    background-color: #5BC0DE;
    border-color: #46B8DA;
    color: white;
}

#search-source .tt-dropdown-menu, #search-input-dropdown {
    max-height: 200px;
    overflow-y: auto;
}

#search-source {
    height: 34px;
}

.tt-dropdown-menu {
    min-width: 160px;
    margin-top: 2px;
    padding: 5px 0;
    background-color: #fff;
    border: 1px solid #ccc;
    border: 1px solid rgba(0,0,0,.2);
    *border-right-width: 2px;
    *border-bottom-width: 2px;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
    border-radius: 6px;
    -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
    -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
    box-shadow: 0 5px 10px rgba(0,0,0,.2);
    -webkit-background-clip: padding-box;
    -moz-background-clip: padding;
    background-clip: padding-box;
}

.tt-suggestion {
    display: block;
    padding: 3px 20px;
}

.tt-suggestion.tt-is-under-cursor {
    color: #fff;
    background-color: #0081c2;
    background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
    background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
    background-image: -o-linear-gradient(top, #0088cc, #0077b3);
    background-image: linear-gradient(to bottom, #0088cc, #0077b3);
    background-repeat: repeat-x;
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0)
}

.tt-suggestion.tt-is-under-cursor a {
    color: #fff;
}

.tt-suggestion p {
    margin: 0;
}

/*
.tt-hint {
    font-size: 0;
    visibility: none;
}
*/

.twitter-typeahead, .tt-hint, .typeahead {
    width: 100% !important;
}

.tt-cursor{
    background-color:#0097cf;
    color: white;
}

/*
#sampler-preview {
    overflow: auto;
}
*/

.csl-entry {
    margin: 0.5em 0 0.5em 1em;
    text-indent: -1em;
}

.sampler-bubble {
    padding: 0.25em;
    border: 1px solid black;
    border-radius: 1em;
}

.sampler-bubble:hover {
    cursor: pointer;
}

.sampler-button {
    padding: 0.25em 0.4em 0.25em 0.25em;
    border: 0 none;
    border-radius: 1em;
}

#unselected-csl-variables, #selected-csl-variables {
    margin-top: 0px;
    line-height: 2.2em;
    border:4px solid transparent;
    min-height: 150;
}

div.csl-drag-hover {
    border:4px dashed #aaaaaa !important;
}

#sampler-itemtype-dropdown {
    max-height: 200px;
    overflow: auto;
}

/* For small screen */
div.field-map-data > :nth-child(even){
  background-color: #dcdcdc;
  border-radius: 0.5em;
}
div.field-map-data > :nth-child(odd){
  background-color: #aaaaaa;
  border-radius: 0.5em;
}

div.field-map-data div.field-label, div.field-map-data div.field-csl {
    border:1px solid white;
}
div.field-map-data {
    border-bottom:6px solid white;
}
div.field-header {
    background-color: white !important;
}
div.field-label {
    padding-left: 2px;
    padding-right: 2px;
}
div.field-csl {
    font-family: Andale Mono, Courier New, monospace;
    padding-left: 2px;
    padding-right: 2px;
}


/*
ol#error-list {
    overflow: auto;
    padding-top: 0px;
    padding-bottom: 0px;
}
*/

/*
ol#errors {
    padding-top: 0px;
    padding-bottom: 0px;
}
*/

#field-map-menu-container {
    overflow-y:auto;
    max-height:200px;
}



.popover {
    width: 20em;
    background: #dddddd;
}

.popover.wider {
    width: 30em;
    max-width: 30em;
}

.popover-title {
    font-weight: bold !important;
}

.popover.wider .popover-title {
    background: #ffffcc;
}

.popover.wider .popover-content {
    background: #ffff88;
}

.popover.right > .arrow::after {
    border-right-color: red;
}

.popover.left > .arrow::after {
    border-left-color: red;
}

.popover.top > .arrow::after {
    border-top-color: red;
}

.popover.bottom > .arrow::after {
    border-bottom-color: red;
}

.popover-content dt {
    margin-top: 0.5em;
}

.popover-content dd {
    margin-left: 0.5em;
}

.popover-content dd p {
    margin-top: 0.5em;
}

div.popover-navi {
    background: #ffffcc;
}

input.previous {
    font-size: smaller;
}

input.next {
    font-size: smaller;
    display: block;
    float: right;
}

.center {
    text-align: center;
}

#submit-wrapper:before {
    content:'①';
}

li.inserted {
    padding-top: 5px;
    padding-bottom: 5px;
}

.form-inline {
    width:300px !important;
    vertical-align:middle;
}

.row-gap {
    margin-top: 1em;
}

.container {
    padding-left: 0px;
    padding-right: 0px;
}

#source, #errors {
    margin-bottom: 0px;
}

#errors {
    overflow: auto;
}

.form-control-feedback {
    position:absolute;
    top:0px;
    cursor: pointer;
}


@-moz-document url-prefix() {
    /* firefox-only css goes here */
    .form-control-feedback {
        position:absolute;
        top:15px;
        cursor: pointer;
    }
}

